<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:padding="12dp">

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom|end"
        android:padding="20dp"
        android:text=""
        android:textColor="@color/white"
        android:textSize="64sp"
        android:maxLines="1"
        android:contentDescription="@string/result_display" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:gravity="center" android:layout_marginBottom="10dp">
            <Button android:id="@+id/btnAC" android:text="@string/ac" style="@style/CalcBtnStyle" android:contentDescription="@string/desc_ac"/>
            <Button android:id="@+id/btnPerc" android:text="@string/percentage" style="@style/CalcBtnStyle" android:contentDescription="@string/desc_percentage"/>
            <Button android:id="@+id/btnDel" android:text="@string/delete" style="@style/CalcBtnStyle" android:contentDescription="@string/desc_delete" tools:ignore="TouchTargetSizeCheck"/>
            <Button android:id="@+id/btnDiv" android:text="@string/divide" style="@style/CalcBtnStyle" android:contentDescription="@string/desc_divide"/>
        </LinearLayout>

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:gravity="center" android:layout_marginBottom="10dp">
            <Button android:id="@+id/btn7" android:text="@string/n7" style="@style/CalcBtnStyle" android:contentDescription="@string/n7"/>
            <Button android:id="@+id/btn8" android:text="@string/n8" style="@style/CalcBtnStyle" android:contentDescription="@string/n8"/>
            <Button android:id="@+id/btn9" android:text="@string/n9" style="@style/CalcBtnStyle" android:contentDescription="@string/n9"/>
            <Button android:id="@+id/btnMult" android:text="@string/multiply" style="@style/CalcBtnStyle" android:contentDescription="@string/desc_multiply"/>
        </LinearLayout>

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:gravity="center" android:layout_marginBottom="10dp">
            <Button android:id="@+id/btn4" android:text="@string/n4" style="@style/CalcBtnStyle" android:contentDescription="@string/n4"/>
            <Button android:id="@+id/btn5" android:text="@string/n5" style="@style/CalcBtnStyle" android:contentDescription="@string/n5"/>
            <Button android:id="@+id/btn6" android:text="@string/n6" style="@style/CalcBtnStyle" android:contentDescription="@string/n6"/>
            <Button android:id="@+id/btnMinus" android:text="@string/minus" style="@style/CalcBtnStyle" android:contentDescription="@string/desc_minus"/>
        </LinearLayout>

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:gravity="center" android:layout_marginBottom="10dp">
            <Button android:id="@+id/btn1" android:text="@string/n1" style="@style/CalcBtnStyle" android:contentDescription="@string/n1"/>
            <Button android:id="@+id/btn2" android:text="@string/n2" style="@style/CalcBtnStyle" android:contentDescription="@string/n2"/>
            <Button android:id="@+id/btn3" android:text="@string/n3" style="@style/CalcBtnStyle" android:contentDescription="@string/n3"/>
            <Button android:id="@+id/btnPlus" android:text="@string/plus" style="@style/CalcBtnStyle" android:contentDescription="@string/desc_plus"/>
        </LinearLayout>

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:gravity="center">
            <Button android:id="@+id/btn00" android:text="@string/n00" style="@style/CalcBtnStyle" android:contentDescription="@string/desc_00"/>
            <Button android:id="@+id/btn0" android:text="@string/n0" style="@style/CalcBtnStyle" android:contentDescription="@string/n0"/>
            <Button android:id="@+id/btnDot" android:text="@string/dot" style="@style/CalcBtnStyle" android:contentDescription="@string/desc_dot"/>
            <Button android:id="@+id/btnEqual" android:text="@string/equal" style="@style/CalcBtnStyle" android:backgroundTint="@color/orange" android:contentDescription="@string/desc_equal"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>